add section work

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </nav>
   </header>
   <div class="container grid pad-x-146">
-    <section class="section">
+    <section class="section mt-48">
       <div class="section__header">
-        <div class="section__header-info">
+        <div class="section__header-info section__header-info--left">
           <p class="section__line">Work<span class="section__line--separate"></span></p>
-          <p class="section__heading">Make huge moves</p>
+          <h2 class="section__heading dot-end">Make huge moves</h2>
           <p class="section__sub-heading mt-16">Creating a next-generation money-transfer service to transform the way
             money
             moves.</p>
@@ -63,7 +63,54 @@
             <div class="section__header-pagination-item"></div>
           </div>
         </div>
-        <p class="section__line mt-128"><span class="section__line--separate"></span> Work</p>
+        <p class="section__line mt-48"><span class="section__line--separate"></span> Work</p>
+      </div>
+    </section>
+    <section class="section mt-48">
+      <div class="section__header">
+        <img class="section__header-info-img" src="./assets/img/home/img4.png" alt="">
+        <div class="section__header-info section__header-info--right">
+          <h2 class="section__heading dot-end">Latest & greatest</h2>
+          <p class="section__sub-heading mt-16">Bringing the world to the Tokyo Olympics.</p>
+        </div>
+      </div>
+      <div class="section__container">
+        <div class="section__container-info-list">
+          <figure class="section__container-info-item">
+            <img class="section__container-info-item-img" src="./assets/img/home/Rectangle 88.png" alt="">
+            <figcaption class="section__container-info-item-caption">
+              <h3 class="section__container-info-item-heading dot-end mt-16">Amplifying audio</h3>
+              <p class="section__container-info-item-sub-heading">Bringing the world to the Tokyo Olympics.</p>
+            </figcaption>
+          </figure>
+          <figure class="section__container-info-item mt-64">
+            <img class="section__container-info-item-img" src="./assets/img/home/Rectangle 89.png" alt="">
+            <figcaption class="section__container-info-item-caption">
+              <h3 class="section__container-info-item-heading dot-end mt-16">Above & beyond</h3>
+              <p class="section__container-info-item-sub-heading">Bringing the world to the Tokyo Olympics.</p>
+            </figcaption>
+          </figure>
+          <figure class="section__container-info-item section__container-info-item--full-1">
+            <div class="section__container-info-item-img">
+              <img src="./assets/img/home/Rectangle 90.png" alt="">
+            </div>
+            <figcaption class="section__container-info-item-caption ml-16">
+              <h3 class="section__container-info-item-heading dot-end">Latest & greatest</h3>
+              <p class="section__container-info-item-sub-heading">Creating a next-generation money-transfer service to
+                transform the way money moves.</p>
+            </figcaption>
+          </figure>
+          <figure class="section__container-info-item section__container-info-item--full-2">
+            <figcaption class="section__container-info-item-caption ml-16">
+              <h3 class="section__container-info-item-heading dot-end">Latest & greatest</h3>
+              <p class="section__container-info-item-sub-heading">Creating a next-generation money-transfer service to
+                transform the way money moves.</p>
+            </figcaption>
+            <div class="section__container-info-item-img">
+              <img src="./assets/img/home/Rectangle 91.png" alt="">
+            </div>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
