add team member

--- a/index.html
+++ b/index.html
@@ -77,14 +77,18 @@
       <div class="section__container">
         <div class="section__container-info-list">
           <figure class="section__container-info-item">
-            <img class="section__container-info-item-img" src="./assets/img/home/Rectangle 88.png" alt="">
+            <div class="section__container-info-item-img">
+              <img src="./assets/img/home/Rectangle 88.png" alt="">
+            </div>
             <figcaption class="section__container-info-item-caption">
               <h3 class="section__container-info-item-heading dot-end mt-16">Amplifying audio</h3>
               <p class="section__container-info-item-sub-heading">Bringing the world to the Tokyo Olympics.</p>
             </figcaption>
           </figure>
           <figure class="section__container-info-item mt-64">
-            <img class="section__container-info-item-img" src="./assets/img/home/Rectangle 89.png" alt="">
+            <div class="section__container-info-item-img">
+              <img src="./assets/img/home/Rectangle 89.png" alt="">
+            </div>
             <figcaption class="section__container-info-item-caption">
               <h3 class="section__container-info-item-heading dot-end mt-16">Above & beyond</h3>
               <p class="section__container-info-item-sub-heading">Bringing the world to the Tokyo Olympics.</p>
@@ -110,6 +114,48 @@
               <img src="./assets/img/home/Rectangle 91.png" alt="">
             </div>
           </figure>
+        </div>
+      </div>
+    </section>
+    <section class="section mt-48">
+      <div class="section__header">
+        <div class="section__header-info">
+          <h2 class="section__heading dot-end">We Team</h2>
+          <p class="section__sub-heading mt-16">Bringing the world to the Tokyo Olympics.</p>
+        </div>
+      </div>
+      <div class="section__container">
+        <div class="section__container-teams">
+          <div class="member">
+            <div class="member__avatar">
+              <img src="./assets/img/home/Ellipse 14.png" alt="">
+            </div>
+            <p class="member__name">Christana D</p>
+            <button class="member__position btn">Leader</button>
+            <p class="member__desc">Christana D.
+              Leader
+              Creating a next-generation money-transfer service to transform the way money moves.</p>
+          </div>
+          <div class="member">
+            <div class="member__avatar">
+              <img src="./assets/img/home/Ellipse 14.png" alt="">
+            </div>
+            <p class="member__name">Christana D</p>
+            <button class="member__position btn">Leader</button>
+            <p class="member__desc">Christana D.
+              Leader
+              Creating a next-generation money-transfer service to transform the way money moves.</p>
+          </div>
+          <div class="member">
+            <div class="member__avatar">
+              <img src="./assets/img/home/Ellipse 14.png" alt="">
+            </div>
+            <p class="member__name">Christana D</p>
+            <button class="member__position btn">Leader</button>
+            <p class="member__desc">Christana D.
+              Leader
+              Creating a next-generation money-transfer service to transform the way money moves.</p>
+          </div>
         </div>
       </div>
     </section>
