--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header class="header grid pad-x-146">
+  <header class="header grid px-146">
     <div class="header__home">
       <div class="header__logo"></div>
       <div class="header__info">
@@ -39,7 +39,7 @@
       </ul>
     </nav>
   </header>
-  <div class="container grid pad-x-146">
+  <div class="container grid px-146">
     <section class="section mt-48">
       <div class="section__header">
         <div class="section__header-info section__header-info--left">
@@ -119,7 +119,7 @@
     </section>
     <section class="section mt-48">
       <div class="section__header">
-        <div class="section__header-info">
+        <div class="section__header-info mx-auto">
           <h2 class="section__heading dot-end">We Team</h2>
           <p class="section__sub-heading mt-16">Bringing the world to the Tokyo Olympics.</p>
         </div>
@@ -156,6 +156,78 @@
               Leader
               Creating a next-generation money-transfer service to transform the way money moves.</p>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="section mt-48">
+      <div class="section__header">
+        <div class="section__header-info">
+          <h2 class="section__heading dot-end">Latest & greatest</h2>
+          <p class="section__sub-heading mt-16">Bringing the world to the Tokyo Olympics.</p>
+        </div>
+      </div>
+      <div class="section__container">
+        <div class="section__cotainer-table">
+          <table class="section__cotainer-table-product">
+            <tr>
+              <td>Scott Sports.</td>
+              <td>Jeep emoji.</td>
+            </tr>
+            <tr>
+              <td>Nike Tech Book.</td>
+              <td>Scott Sports.</td>
+            </tr>
+            <tr>
+              <td>Value Retail.</td>
+              <td>Getty.</td>
+            </tr>
+            <tr>
+              <td>Quicken Loans.</td>
+              <td>Gucci.</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </section>
+    <section class="section mt-48">
+      <div class="section__header">
+        <div class="section__header-info section__header-info--left pl-16">
+          <p class="section__line text--white">Work<span class="section__line--separate"></span></p>
+          <h2 class="section__heading dot-end text--white">Be one of us</h2>
+          <p class="section__sub-heading mt-16 text--white">Bringing the world to the Tokyo Olympics.</p>
+        </div>
+        <img class="section__header-info-img" src="./assets/img/home/Rectangle 93.png" alt="">
+      </div>
+    </section>
+    <section class="section mt-48">
+      <div class="section__header">
+        <div class="section__header-info mx-auto">
+          <h2 class="section__heading dot-end">Have any question?</h2>
+        </div>
+      </div>
+      <div class="section__container">
+        <div class="section__container-form">
+          <form action="#" class="form__question">
+            <label for="" class="form__question_label">Title Question 1</label>
+            <input class="form__question-input" type="text">
+            <label for="" class="form__question_label">Title Question 2</label>
+            <input class="form__question-input" type="text">
+            <label for="" class="form__question_label">Title Question 3</label>
+            <input class="form__question-input" type="text">
+          </form>
+        </div>
+      </div>
+    </section>
+    <section class="section mt-48">
+      <div class="section__header">
+        <div class="section__header-info mx-auto">
+          <h2 class="section__heading dot-end">Yay! 🎉Join our community</h2>
+          <p class="section__sub-heading mt-16">Follow the community and update the latest news from the project</p>
+        </div>
+      </div>
+      <div class="section__container">
+        <div class="section__container-contact mx-auto">
+          <button class="btn btn--white">Join our community</button>
         </div>
       </div>
     </section>
