--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap"
     rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/bahnschrift" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.2.0/css/fontawesome.min.css">
+  <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.2.0/css/brands.min.css">
+  <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.2.0/css/solid.min.css">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/main.css">
@@ -19,11 +21,11 @@
 
 <body>
   <header class="header grid px-146">
-    <div class="header__home">
-      <div class="header__logo"></div>
-      <div class="header__info">
-        <p class="header__brand-name">Uranus<span>.</span></p>
-        <p class="header__brand-desc">Technology solution work</p>
+    <div class="logo">
+      <div class="logo__icon"></div>
+      <div class="logo__info">
+        <p class="logo__brand-name">Uranus<span>.</span></p>
+        <p class="logo__brand-desc">Technology solution work</p>
       </div>
     </div>
     <nav class="nav">
@@ -232,7 +234,34 @@
       </div>
     </section>
   </div>
-  <div class="footer"></div>
+  <div class="footer grid px-146">
+    <div class="footer__container">
+      <div class="footer__brand">
+        <div class="logo">
+          <div class="logo__icon"></div>
+          <div class="logo__info">
+            <p class="logo__brand-name">Uranus<span>.</span></p>
+            <p class="logo__brand-desc">Technology solution work</p>
+          </div>
+        </div>
+        <p class="footer__company">270 East 50 Street
+          (between Lexington and 5rd Avenues)
+          New York, NY 10021</p>
+        <div class="footer__social-icons">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+      </div>
+      <div class="footer__contact">
+        <p>Telephone: 215-002-1500</p>
+        <p>Email: info@design.com</p>
+      </div>
+    </div>
+    <div class="footer__copyright">
+      <p>© 2022 Uranus</p>
+    </div>
+  </div>
 </body>
 
 </html>
